# CRFS

./: .gitignore  README.md
CRFS/: Cargo.toml
CRFS/src/: core.rs  errors.rs  helpers.rs  main.rs  tests.rs  types.rs
CRFS/src/conflict_res/: CmRDT.rs  directed_graph.rs  driver.rs
CRFS/src/conflict_res/ast_doc/: md.rs  mod.rs  types.rs
CRFS/src/conflict_res/drivers/: CmRDT.rs  directed_graph.rs  driver.rs  mod.rs
CRFS/src/conflict_res/drivers/ast_doc/: crdt.rs  md.rs  mod.rs  types.rs  yata.rs
CRFS/src/conflict_res/drivers/file_tree/: mod.rs  test.rs
CRFS/src/conflict_res/drivers/generic_doc/: crdt.rs  markdown.rs  mod.rs  types.rs
CRFS/src/conflict_res/file_tree/: mod.rs
CRFS/src/default_networking/: networking.rs
CRFS/src/default_storage/: mod.rs  outputs.rs  storage.rs
CRFS/src/default_storage/storage/: mod.rs  object.rs
CRFS/src/dummy_networking/: networking.rs
CRFS/src/dummy_storage/: storage.rs
CRFS/src/networking/: api.rs  mod.rs  tests.rs
CRFS/src/storage/: meta.rs  mod.rs  object.rs
CRFS/src/tests/: ast_doc_md_test.rs  ast_doc_test.rs  cmrdt_test.rs  misc_test.rs  mod.rs  networking_test.rs  storage_test.rs  yata_test.rs
CRFS_Server/: manage.py  requirements-dev.txt  requirements.txt  tox.ini
CRFS_Server/API/: admin.py  handlers.py  models.py  urls.py  views.py
CRFS_Server/API/migrations/: 0001_initial.py  0002_alter_user_display_name.py  0003_alter_filesystem_display_name.py  0004_filesystem_opts.py  0005_operation.py  (+1 more)
CRFS_Server/CRFS_Server/: asgi.py  settings.py  urls.py  wsgi.py
Eval/: evaluation.py
(+3 files in other folders)
