[package]
name = "CRFS"
version = "0.1.0"
edition = "2021"

[dependencies]
generic-array = { version = "0.14.7", features = ["serde"] }
hex-literal = "1.0.0"
homedir = "0.3.4"
json = "0.12.4"
markdown-ast = "0.1.1"
pulldown-cmark = { version = "0.11.3", features = ["serde"] }
rand = { version = "0.9.0", features = ["serde"] }
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = { version = "3.12.0", features = ["json"] }
sha2 = "0.10.8"
trash = "5.2.2"
uuid = { version = "1.11.0", features = ["serde", "v7"] }
